--- a/.github/workflows/asciidoc.yml
+++ b/.github/workflows/asciidoc.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Setup Ruby (pour Asciidoctor)
         uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.1'
 
       - name: Install Asciidoctor
         run: gem install asciidoctor
